--- a/templates/download.html
+++ b/templates/download.html
@@ -13,6 +13,7 @@
 
 <head>
    <title>Download Page</title>
+   <link rel="icon" href="{{ url_for('static', filename='images/favicon.ico') }}">
 </head>
 
 <div class="showcase">
