--- a/templates/loading.html
+++ b/templates/loading.html
@@ -94,6 +94,7 @@
 
 <head>
    <title>Loading Page</title>
+   <link rel="icon" href="{{ url_for('static', filename='images/favicon.ico') }}">
 </head>
 
 <div class="showcase">
