--- a/templates/alpha_gallery.html
+++ b/templates/alpha_gallery.html
@@ -18,7 +18,7 @@
          let url = galleryImages[i].src;
          galleryUrls[i] = url.substring(url.lastIndexOf('/') + 1);
          submittable += (i > 0) ? "=" : "";
-         submittable += galleryUrls[i];      
+         submittable += galleryUrls[i];
       }
 
       document.cookie = "color=" + color + "; path=" + submittable;
@@ -62,12 +62,22 @@
 
    }
 
-   function update_background(){
+   function update_background() {
       color = document.getElementById("colorpicker").value;
-      image = "linear-gradient(" + color + ", " + color + ")"
-      document.getElementById("gallery").style.backgroundImage = image
+      image = "linear-gradient(" + color + ", " + color + ")";
+      document.getElementById("gallery").style.backgroundImage = image;
+
    }
-   
+
+   function update_background2(bgimage) {
+      image = new Image();
+      image.src = bgimage;
+      console.log("yeet");
+      console.log(image.src);
+      document.getElementById("gallery").style.backgroundImage = image;
+      console.log("success");
+   }
+
    function initialize(walletItem) {
       walletImages.push(walletItem);
       console.log(walletImages.length);
@@ -76,6 +86,7 @@
    function setup() {
       update_background();
       document.getElementById("colorpicker").addEventListener("input", update_background);
+      
    }
 
    $(document).ready(setup);
@@ -91,8 +102,11 @@
 
 <head>
    <title>Gallery Builder</title>
+   <link rel="icon"
+      href="{{ url_for('static', filename='images/favicon.ico') }}">
    <meta name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no">
+
 </head>
 
 <body>
@@ -107,19 +121,85 @@
       <!-- Gallery -->
       <div class="align-items-center" id="gallery-container">
          <div class="col" id="gallery">
-            <div class="row justify-content-center" id="photo-list"></div>
+            <div class="row justify-content-center" id="photo-list">
+            </div>
          </div>
       </div>
 
-      <!-- Color Wheel -->
-      <form style="z-index: 1">
-         <label for="colorpicker">Select a Background Color:</label>
-         <input type="color" id="colorpicker" name = "colorpicker" value="#1A33EA">
-      </form>
+      <!--Background Selector-->
+      <script>var elementSelected = null;
+         var typeSelected = false;
+
+         $(document).on('click', '.list-image > img', function () {
+            $('.list-image > img').each(function () {
+               $(this).removeClass('active');
+            })
+            $(this).addClass('active');
+            elementSelected = $(this);
+            typeSelected = false;
+            console.log("Clicked");
+            console.log(elementSelected.attr('src'));
+            update_background2(elementSelected.attr('src'));
+         });
+
+         $(document).on('input', '#text-src', function () {
+            $('.list-image > img').each(function () {
+               $(this).removeClass('active');
+            })
+            elementSelected = $(this);
+            typeSelected = true;
+         })
+
+         $(document).on('click', '#button-confirm', function () {
+            $('.select-image').hide();
+            if (typeSelected == true) {
+               $('.view-image > img').attr('src', elementSelected.val());
+            }
+            else {
+               $('.view-image > img').attr('src', elementSelected.attr('src'));
+            }
+            $('.view-image').fadeIn('high');
+         })
+
+         $(document).on('click', '#button-other', function () {
+            $('.view-image').hide();
+            $('.select-image').fadeIn('high');
+         })</script>
+      <div class="parent-selector">
+         <a>Select a Background</a>
+         <div class="select-image">
+            <div class="list-image">
+               <img class="active"
+                  src="https://pbs.twimg.com/profile_banners/1427360637408120837/1633464733/1500x500"
+                  alt="1" />
+               <img
+                  src="https://pbs.twimg.com/profile_banners/1427360637408120837/1633464733/1500x500"
+                  alt="2" />
+               <img
+                  src="https://pbs.twimg.com/profile_banners/1427360637408120837/1633464733/1500x500"
+                  alt="1" />
+               <img
+                  src="https://pbs.twimg.com/profile_banners/1427360637408120837/1633464733/1500x500"
+                  alt="2" />
+            </div>
+            <!-- Color Wheel -->
+            <form style="z-index: 1; padding-bottom: 10px;">
+               <label for="colorpicker">Select a Background
+                  Color:</label>
+               <input type="color" id="colorpicker" name="colorpicker"
+                  value="#1A33EA">
+            </form>
+            
+         </div>
+         
+      </div>
+
+
+
 
       <!-- Button -->
       <div class="button-container">
-            <button onclick="redirectToDownload()">Create Gallery</button>
+         <button onclick="redirectToDownload()">Create Gallery</button>
       </div>
 
       <!-- Sidebar -->
