--- a/templates/error.html
+++ b/templates/error.html
@@ -4,6 +4,7 @@
 
 <head>
    <title>Error Page</title>
+   <link rel="icon" href="{{ url_for('static', filename='images/favicon.ico') }}">
 </head>
 
 <div class="showcase">
