Crop the logo image
Small edits to the front-end.

--- a/templates/download.html
+++ b/templates/download.html
@@ -23,6 +23,6 @@
       </video>
    </div>
    <div class="content">
-      <h3 style="font-size: 35px;"><a href="{{ url }}">Click Here to Download Your Gallery</a></h3>
+      <h3 style="font-size: 35px;"><a href="{{ url }}">Click Here to View Your Gallery</a></h3>
    </div>
 </div>
