--- a/templates/index.html
+++ b/templates/index.html
@@ -45,8 +45,8 @@
       </video>
    </div>
    <div class="content">
-      <img  src="{{ url_for('static', filename='images/logo4.png') }}" style="margin-bottom: 10px;">
-     <!---- <h1>Solien Gallery</h1> ---->
+      <img  src="{{ url_for('static', filename='images/logo4_cropped.png') }}">
+      <h1>Solien Gallery</h1>
       <h3>A New Way To Showcase Your NFTs</h3>
       <center>
          <table>
