--- a/static/styles/gallery_style.css
+++ b/static/styles/gallery_style.css
@@ -205,9 +205,9 @@ body{
    z-index: 1000;
  
   
-  background-color: #000000;
+  background-color:clear;
   border-radius: 5px;
-  box-shadow: 10px 10px 10px 0px rgba(0, 0, 0, 0.2);
+  /*box-shadow: 10px 10px 10px 0px rgba(0, 0, 0, 0.2);*/
   padding:20px;
 }
 
@@ -235,73 +235,6 @@ body{
   padding: 10px;
 }
 
-/* INPUT TEXT */
-
-.input-div {
-  position: relative;
-  padding: 15px;
+#button-confirm{
+   z-index: 11111;
 }
-
-.input-text {
-  font-family: inherit;
-  width: 100%;
-  border: 0;
-  border-bottom: 1px solid #242424;
-  outline: 0;
-  font-size: 12px;
-  color: #242424;
-  padding: 7px 0;
-  background: transparent;
-  transition: border-color 0.2s;
-}
-
-.input-text::placeholder {
-  color: transparent;
-}
-
-.input-text:placeholder-shown ~ .input-label {
-  font-size: 14px;
-  cursor: text;
-  top: 20px;
-}
-
-label,
-.input-text:focus ~ .input-label {
-  position: absolute;
-  top: 0;
-  display: block;
-  transition: 0.2s;
-  font-size: 12px;
-  color: #242424;
-}
-
-.input-text:focus ~ .input-label {
-  color: #242424;
-}
-
-.input-text:focus {
-  padding-bottom: 6px;
-  border-bottom: 2px solid #242424;
-}
-
-.button2{
-   width: 90%;
-   margin-left: 5%;
-   margin-right: 5%;
-   padding-top: 8px;
-   padding-bottom: 8px;
-   background-color: #424242;
-   text-align: center;
-   cursor: pointer;
-   border-radius: 2px;
- }
- .button2:hover{
-    background-color: #242424;
- }
- .button2:active{
-    background-color: #121212;
- }
- 
- .button2 > span{
-   color: #eeeeee
- }
