added new backgrounds

--- a/templates/alpha_gallery.html
+++ b/templates/alpha_gallery.html
@@ -167,13 +167,13 @@
                   src="https://pbs.twimg.com/profile_banners/1427360637408120837/1633464733/1500x500"
                   alt="1" />
                <img
-                  src="https://pbs.twimg.com/profile_banners/1427360637408120837/1633464733/1500x500"
+                  src="https://www.wallpaperuse.com/wallp/59-595920_m.png"
                   alt="2" />
                <img
-                  src="https://pbs.twimg.com/profile_banners/1427360637408120837/1633464733/1500x500"
+                  src="https://media.musely.com/u/74b2435a-83fc-4a93-afd4-eddecd2f9f76.jpg"
                   alt="1" />
                <img
-                  src="https://pbs.twimg.com/profile_banners/1427360637408120837/1633464733/1500x500"
+                  src="https://www.teahub.io/photos/full/28-289473_twitter-cover-photo-45-stars..jpg"
                   alt="2" />
             </div>
             <!-- Color Wheel -->
