--- a/templates/loading.html
+++ b/templates/loading.html
@@ -11,33 +11,63 @@
    let ellipsis_call = 0;
    let stop_animation = false;
 
+   function pollGalleryQueue(data) {
+      // Redirect to gallery page if task finished.
+      if (data.status == "finished") {
+         stop_animation = true;
+         let nftList = JSON.parse(data.response)["nft_list"];
+         let galleryLink = "/gallery/";
+         for (let i = 0; i < nftList.length; i++) {
+            let url = nftList[i]["metadata"]["image"];
+            let url_id = url.substring(url.lastIndexOf('/') + 1);
+            galleryLink += (i > 0) ? "=" : "";
+            galleryLink += url_id; 
+         }
+         window.location.href = galleryLink;
+      }
+      // Redirect to error page if task failed.
+      else if (data.status == "failed") {
+         window.location.href = "{{ url_for('error', status_code='404') }}";
+      }
+      // Otherwise, poll the queue in another half a second.
+      else {
+         setTimeout(pollTaskQueue, 500);
+      }
+   }
+
+   function pollDownloadQueue(data) {
+      // Redirect to download page if task finished.
+      if (data.status == "finished") {
+         let imageUrl = data.response;
+
+         // Parse Cloudinary URL.
+         slashIndex = imageUrl.lastIndexOf('/');
+         let imageId2 = imageUrl.substring(slashIndex + 1);
+         imageUrl = imageUrl.substring(0, slashIndex);
+         let imageId1 = imageUrl.substring(imageUrl.lastIndexOf('/') + 1);
+
+         let downloadPath = "/download/" + imageId1 + "=" + imageId2;
+         window.location.href = downloadPath;
+      }
+      // Redirect to error page if task failed.
+      else if (data.status == "failed") {
+         window.location.href = "{{ url_for('error', status_code='404') }}";
+      }
+      // Otherwise, poll the queue in another half a second.
+      else {
+         setTimeout(pollTaskQueue, 500);
+      }
+   }
+
    function pollTaskQueue() {
-      status_url = "/status/" + "{{ job_id }}";
-      $.getJSON(status_url, function(data) {
-         // Redirect to gallery page if task finished.
-         if (data.status == "finished") {
-            console.log(data.status)
-            stop_animation = true;
-            let nftList = JSON.parse(data.response)["nft_list"];
-            let galleryLink = "/alpha_gallery/";
-            for (let i = 0; i < nftList.length; i++) {
-               let url = nftList[i]["metadata"]["image"];
-               let url_id = url.substring(url.lastIndexOf('/') + 1);
-               console.log(url_id);
-               galleryLink += (i > 0) ? "=" : "";
-               galleryLink += url_id; 
-            }
-            window.location.href = galleryLink;
-         }
-         // Redirect to error page if task failed.
-         else if (data.status == "failed") {
-            window.location.href = "{{ url_for('error', status_code='404') }}";
-         }
-         // Otherwise, poll the queue in another half a second.
-         else {
-            setTimeout(pollTaskQueue, 500);
-         }
-      });
+      let status_url = "/status/{{ page }}/{{ job_id }}";
+      let page = "{{ page }}";
+      if (page == "gallery") {
+         $.getJSON(status_url, pollGalleryQueue);
+      }
+      else if (page == "download") {
+         $.getJSON(status_url, pollDownloadQueue);
+      }
    }
 
    function getLoadingText() {
