--- a/static/styles/gallery_style.css
+++ b/static/styles/gallery_style.css
@@ -80,6 +80,10 @@ input[type=color] {
    background-color: transparent;
 }
 
+.photolist {
+
+}
+
 #inner-container {
    height: 200px;
 }
@@ -94,11 +98,11 @@ input[type=color] {
    transition: .95s ease;
 }
 
-.nft-img {
+.nftimg {
    max-height: calc(var(--height) * var(--nft-factor));
    max-width: calc(var(--width) * var(--nft-factor));
    margin: 20px 12px 20px 12px;
-  
+   cursor: move;
    transition: .95s ease;
 }
 
